force-app/main/default/objects/Cancellation_Policy__c/Cancellation_Policy__c.object-meta.xml
<CustomObject>
    <label>Cancellation Policy</label>
    <nameField>
        <label>Cancellation Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cancellation Policies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>