force-app/main/default/objects/Cancellation_Policy__c/fields/Apply_on_Orders_Booked_From__c.field-meta.xml
<CustomField>
    <fullName>Apply_on_Orders_Booked_From__c</fullName>
    <label>Apply on Orders Booked From</label>
    <type>Date</type>
</CustomField>