force-app/main/default/objects/Cancellation_Policy__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Cancellation Policies</relationshipLabel>
    <relationshipName>Cancellation_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>