force-app/main/default/objects/Cancellation_Policy__c/fields/In_Force_From__c.field-meta.xml
<CustomField>
    <fullName>In_Force_From__c</fullName>
    <label>In Force From</label>
    <type>Date</type>
</CustomField>