force-app/main/default/objects/Cancellation_Policy__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <label>Merchant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Product Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cancellation Policies</relationshipLabel>
    <relationshipName>Cancellation_Policies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>